--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LANDING</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./styles/styles.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LANDING</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./styles/styles.css" />
   </head>
   <body class="page">
     <div class="page__header page__header-grey">
@@ -31,5 +34,31 @@
         </nav>
       </header>
     </div>
+    <main class="page__content">
+      <div class="page__intro page-grey">
+        <section class="intro section">
+          <div class="intro__content">
+            <h1 class="intro__heading">
+              our strong organaisation
+            </h1>
+            <p class="intro__text">
+              Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do
+              eiusmod tempor incididunt ut labore et. ectetur adig ipis cing
+              elit, sed do eiusmod tempor incididunt.
+            </p>
+            <button class="intro__btn action-btn">
+              Contact Us
+            </button>
+          </div>
+          <a class="intro__video">
+            <img
+              class="intro__img"
+              src="./images/red__square.png"
+              alt="Красный квадрат, потом вместо него будет видео, сразу не поставил, проблемы с сетью были"
+            />
+          </a>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
